ANVGL-65 Fixed z-index issue with menu

--- a/src/main/webapp/css/menu.css
+++ b/src/main/webapp/css/menu.css
@@ -3,6 +3,7 @@
     height:60px; 
     width:100%;    
     background-color: #1368ad;
+    z-index: 9999;
 }
 
 .banner {
